--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -4,6 +4,7 @@ body {
   font-family: 'Red Hat Display', sans;
 }
 #bannerRight a {
+  margin-right: 100px;
   vertical-align: middle;
   height: 50px;
   vertical-align: text-top;
